--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,11 @@
 {
   "name": "angular-translate-storage-local",
-  "version": "0.1.7",
+  "version": "0.1.6",
   "main": "./angular-translate-storage-local.js",
   "dependencies": {
-    "angular-translate": "2.0.0",
-    "angular-translate-storage-cookie": "~0.1.7"
+    "angular": "1.0.8",
+    "angular-cookies": "1.0.8",
+    "angular-translate": "~1.1.1",
+    "angular-translate-storage-cookie": "~0.1.6"
   }
 }
