--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,6 @@
   "dependencies": {
     "angular-translate": "~2.4.0",
     "angular-translate-storage-cookie": "~2.4.0"
-  }
+  },
+  "ignore": []
 }
