--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "angular-translate-storage-local",
-  "version": "2.7.0",
+  "version": "2.7.2",
   "description": "Abstraction layer for localStorage. This service is used when telling angular-translate to use localStorage as storage.",
   "main": "angular-translate-storage-local.js",
   "repository": {
     "type": "git",
-    "url": "https://mchambaud@github.com/mchambaud/bower-angular-translate-storage-local.git"
+    "url": "https://github.com/angular-translate/bower-angular-translate-storage-local.git"
   },
   "keywords": [
     "angular",
-    "angular-translate",
-    "angular-translate-storage-local"
+    "translate",
+    "storage",
+    "localStorage"
   ],
   "author": "Pascal Precht",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mchambaud/bower-angular-translate-storage-local/issues"
+    "url": "https://github.com/angular-translate/angular-translate/issues"
   },
-  "homepage": "https://github.com/mchambaud/bower-angular-translate-storage-local",
+  "homepage": "https://angular-translate.github.io",
   "dependencies": {
-    "angular-translate": "^2.7.0"
+    "angular-translate": "~2.7.2",
+    "angular-translate-storage-cookie": "~2.7.2"
   }
 }
