--- a/bower.json
+++ b/bower.json
@@ -5,12 +5,7 @@
   "main": "./angular-translate-storage-local.js",
   "ignore": [],
   "author": "Pascal Precht",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://www.opensource.org/licenses/MIT"
-    }
-  ],
+  "license": "MIT",
   "dependencies": {
     "angular-translate": "~2.7.2",
     "angular-translate-storage-cookie": "~2.7.2"
